# la-madriguera

./: .env  CMakeLists.txt  README.md  app.py  config.py  models.py  package.xml  requirements.txt
launch/: heating_contoller.launch  thermostat.launch
migrations/versions/: 209d9e1d79bc_.py  2daf676f1564_.py  5b43cb248af7_.py  ae00016fafa5_.py  cf6d68fa2662_.py  dee2a86d2710_.py  f09c97179f4f_.py
scripts/: ds18b20_driver.py  heating_controller.py  heating_driver.py  heating_driver_vServo.py  thermostat_driver.py  thermostat_getStatus.py
src/: temp_controller.cpp
srv/: SetTemperature.srv
static/: base.css  heating-system.js  toggle.css
templates/: base.html  heating-system-set-status.html  heating-system.html  index.html  login.html  signup.html
templates/js/: heating-system-switch.js
